feat: asciidoc and architecture diagram generators (#24)
* feat: initial generation

* fix: asciidoctor dependency

* fix: javadoc gen copy

* feat: docs index gen

* feat: working modulith html docs generation, YMirror error

* feat!: elnarion class diagrams, two issues: semanta generator has errors, image output dir override

* fix: image directory leaking

* fix: switched from native but buggy smetana to graphviz

* ref: srp diagram generation method

* feat: transitioned from elnarion to archunit

* feat: technically a working mess

* feat: transitioned from elnarion to archunit

* feat: Structurizr first version

* ref: graph tool name

* ref: ModuleExporter

* ref: quality refactor

* feat: module colors

* feat: color per package

* feat: Ilograph

* feat: ran structurizr container

* feat: structuriz pipeline 1.0

* ref: container gitignore

* ref: diagram gen refinements

* feat: nested package gen, fix message request handler inconsistency

* ref: removed sout

* ref: gradle docs task, libs to toml, Dockerfile

* ref: structuriz location

---------

Co-authored-by: kinga <kinga.kwasniak5@gmail.com>